# uWallet

./: README.md  build.gradle  local.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: chain_config.json  me_page_config.json
app/src/main/java/com/self/app/: MainApp.kt  (+2 more)
app/src/main/res/drawable/: add_token_item_bg.xml  asset_header_bg.xml  balance_header_bg.xml  biankuang_1.xml  black_bg.xml  black_rounded_bg.xml  corner_light_gray_bg.xml  corner_primiry_bg.xml  corner_wallet_card_bg.xml  cornor_background.xml  dialog_token_selector_bg.xml  pink_circle.xml  pink_circle_highlighted.xml  white_bg.xml
app/src/main/res/layout/: activity_add_token.xml  activity_add_wallet.xml  activity_main.xml  activity_screen.xml  activity_splash.xml  activity_test.xml  activity_token_trans_event.xml  activity_transfer.xml  activity_wallet_detail.xml  asset_header.xml  banner.xml  custom_actionbar_layout.xml  dialog_receive_qrcode.xml  dialog_token_selector.xml  dialog_wallet_manager.xml  fragment_assets.xml  fragment_base.xml  fragment_discover.xml  fragment_handicap.xml  fragment_home.xml  fragment_main.xml  fragment_me.xml  handicap_header.xml  home_header.xml  home_tool_bar.xml  item_asset_header.xml  item_asset_info.xml  item_header.xml  item_token_info.xml  item_token_trans_event.xml  item_wallet_info.xml  loading.xml  normal_action_bar.xml  page_me_item.xml  scan_activity.xml  single_recyclerview.xml  sticky_header.xml  test_coord.xml  token_card.xml  token_group_item.xml  (+9 more)
app/src/main/res/menu/: menu_navigation.xml  menu_wallet.xml
app/src/main/res/navigation/: navigation_graph.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
base/: build.gradle
base/src/main/: AndroidManifest.xml
baseUi/: build.gradle
baseUi/src/main/res/drawable/: btn_bg.xml  btn_press_bg.xml  edit_bg.xml  selector_confirm_bg.xml
baseUi/src/main/res/layout/: cover_view.xml  dialog_wallet_info.xml
baseUi/src/main/res/values/: attrs.xml  colors.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
network/: build.gradle
wallet/: .gitignore  build.gradle
wallet/schemas/com.zml.wallet.WalletRoomDataBase/: 1.json  2.json
wallet/src/main/cpp/: CMakeLists.txt  jni_helper.cpp  jni_helper.h  local_storage.cpp  local_storage.h  log_util.h  wallet.cpp  wallet.h
wallet/src/main/cpp/include/TrustWalletCore/: TWBase64.h  TWCoinType.h  TWMnemonicLanguage.h
zbar/: build.gradle
zbar/src/main/: AndroidManifest.xml
zbar/src/main/cpp/: Android.mk  config.h  zbarjni.c
zbar/src/main/cpp/libiconv-1.7/: Makefile  config.h  config.status  libtool
zbar/src/main/cpp/libiconv-1.7/lib/: Makefile  iconv.lo  libcharset.1.dylib  libcharset.la  libiconv.la  localcharset.lo  relocatable.lo
zbar/src/main/cpp/libiconv-1.7/libcharset/: Makefile  config.h  config.status  libtool
zbar/src/main/cpp/libiconv-1.7/po/: Makefile  Makefile.in
zbar/src/main/cpp/libiconv-1.7/src/: Makefile  iconv_no_i18n
zbar/src/main/cpp/libiconv-1.7/srclib/: Makefile  fcntl.h  signal.h  stdio.h  stdlib.h  unistd.h  wchar.h
zbar/src/main/cpp/libiconv-1.7/tests/: Makefile
(+182 files in other folders)
